# ese519-2022-lab2-2B

./: README.md
01_registers/: 05_i2c_traffic.md  README.md
01_registers/Code/flashlight/: CMakeLists.txt
02_repl/: 02_repl.md  README.md
02_repl/Code/: CMakeLists.txt  main.c
02_repl/src/: adafruit_qtpy_rp2040.h
03_sequencer/: README.md
03_sequencer/src/PC/records/: 1115232508.txt
03_sequencer/src/REPL/: main.c
04_slow_motion/: README.md
05_i2c_traffic/: README.md
06_pioscope/: README.md  serial_output.txt
06_pioscope/src/: logic_analyser.c
07_pio_sequencer/: README.md
07_pio_sequencer/src/PC/: sequencer.py
07_pio_sequencer/src/PC/records/: 1115232807.txt
07_pio_sequencer/src/REPL/: CMakeLists.txt  main.c  neopixel.c  pio_i2c.c
08_adps_protocol/: README.md
08_adps_protocol/src/: APDS9960.c
09_lab_on_a_chip/: README.md
09_lab_on_a_chip/src/PC/: functions.py  piosequencer.py  terminal_log.txt
09_lab_on_a_chip/src/REPL/: CMakeLists.txt  flashlight.c  neopixel.h  pio_i2c.h
10_protoboard/: README.md
Code/flashlight/: neopixel.c
